src/css/_status_bar.scss
.status-bar {
  height: $bar-height;
  background-color: $bar-bg;
  color: #eeeeec;
  font-size: 12px;
  font-family: sans-serif;
  user-select: none;
  cursor: default;

  img {
    width: 14px;
    height: 14px;
  }

  .menu-bar-item, .hostname, .clock {
    user-select: none !important;
    padding: 6px 5px;
  }

  .triggered {
    border-bottom: 3px solid $blue;
    padding-bottom: 4px;
  }

  .clock {
    font-weight: bold;
  }

  .menu-bar-item-content {
    border: 0px !important;
    padding: 0px !important;
    margin: 0px !important;
  }

  .menu {
    background-color: $bar-bg;
    color: white;

    .menu-item {
      padding: 4px 0px 4px 30px;
      width: 200px;

      &:hover {
        background-color: $blue;
      }
    }

    .keybinding {
      color: #999;
      float: right;
      margin-right: 7px;
    }
  }
}

